[package]
name = "my-parser"
version = "0.1.0"
authors = ["suhanyujie <suhanyujie@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"]}
nom = "7.0.0"
bytes = "1.0.1"
structopt = "0.3.14"
