[package]
name = "my-parser"
version = "0.1.0"
authors = ["suhanyujie <suhanyujie@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"]}
nom = "7.0.0"
bytes = "1.0.1"
structopt = "0.3.14"
tera = "1.12.1"
serde_json = "1.0.68"
serde_derive = "1.0.130"
serde = {version = "1.0.130", features = ["derive"]}
